[metadata]
name = aaaCalendar
version = 0.1.4
author = Amin Ahmad Ahmadi
author_email = aminahmadahmadi@outlook.com
description = Make Iranian Solar Calendar For Print
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aminahmadahmadi/Calendar
project_urls =
    Bug Tracker = https://github.com/aminahmadahmadi/Calendar/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src